# tpot2

./: 404.html  PULL_REQUEST_TEMPLATE.md  index.html  objects.inv  pyproject.toml  requirements_dev.txt  setup.cfg  sitemap.xml
Tutorial/: 1_Using_TPOT.ipynb  7_dask_parallelization.ipynb
Tutorial/1_Estimators_Overview/: index.html
Tutorial/1_Using_TPOT/: index.html
Tutorial/2_Defining_Search_Space_(config_dicts)/: index.html
Tutorial/2_Search_Spaces/: index.html
Tutorial/3_Feature_Set_Selector/: index.html
Tutorial/3_Genetic_Feature_Set_Selectors/: index.html
Tutorial/4_Genetic_Feature_Selection/: index.html
Tutorial/4_Symbolic_Regression_and_Classification/: index.html
Tutorial/5_Genetic_Feature_Selection/: index.html
Tutorial/5_GraphPipeline/: index.html
Tutorial/6_GraphPipeline/: index.html
Tutorial/6_SH_and_early_termination/: index.html
Tutorial/6_Symbolic_Regression_and_Classification/: index.html
Tutorial/7_dask_parallelization/: index.html
Tutorial/8_Genetic_Algorithm_Overview/: index.html
Tutorial/8_SH_and_cv_early_pruning/: index.html
Tutorial/8_SH_and_early_termination/: index.html
Tutorial/9_Genetic_Algorithm_Overview/: index.html
Tutorial/amltk_search_space_parser_example/: index.html
cite/: index.html
contribute/: index.html
installation/: index.html
related/: index.html
search/: search_index.json
support/: index.html
tpot2/: base_evolver.py  estimator_objective_functions.py  objectives.py  population.py
tpot2/config/: autoqtl_builtins.py  classifiers.py  get_configspace.py  hyperparametersuggestor.py  mdr_configs.py  regressors.py  selectors.py  special_configs.py  transformers.py
tpot2/evolvers/: base_evolver.py
tpot2/selectors/: lexicase_selection.py  nsgaii.py  random_selector.py  tournament_selection.py  tournament_selection_dominated.py
tpot2/tests/: test_customized_iniPop.py
tpot2/tpot_estimator/: estimator.py  (+2 more)
using/: index.html
(+101 files in other folders)
